force-app/main/default/objects/sc_ext__Platform_Encryption_Supported_Feature__mdt/fields/sc_ext__Beta__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Beta__c</fullName>
    <label>Beta</label>
    <referenceTo>sc_ext__Platform_Encryption_Supported_Version__mdt</referenceTo>
    <relationshipLabel>Beta Features</relationshipLabel>
    <relationshipName>Beta_Features</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>