force-app/main/default/objects/sc_ext__Platform_Encryption_Supported_Feature__mdt/fields/sc_ext__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Help_Text__c</fullName>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>