force-app/main/default/objects/sc_ext__Platform_Encryption_Supported_Feature__mdt/fields/sc_ext__Pilot__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Pilot__c</fullName>
    <label>Pilot</label>
    <referenceTo>sc_ext__Platform_Encryption_Supported_Version__mdt</referenceTo>
    <relationshipLabel>Pilot Features</relationshipLabel>
    <relationshipName>Pilot_Features</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>