force-app/main/default/objects/sc_ext__Platform_Encryption_Supported_Feature__mdt/fields/sc_ext__Pilot_Enabled__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Pilot_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilot Enabled</label>
    <type>Checkbox</type>
</CustomField>