force-app/main/default/objects/sc_ext__Platform_Encryption_Supported_Feature__mdt/fields/sc_ext__Production__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Production__c</fullName>
    <label>Production</label>
    <referenceTo>sc_ext__Platform_Encryption_Supported_Version__mdt</referenceTo>
    <relationshipLabel>Production Features</relationshipLabel>
    <relationshipName>Production_Features</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>